--- a/charts.html
+++ b/charts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+        <script src="Apis/chart.min.js"></script>
         <link rel="stylesheet" href="charts.css">
         <script src="charts.js"></script>
     </head>
